[package]
name = "publish_lab_api"
version = "0.1.0"
edition = "2024"

[dependencies]
amiquip = "0.4.2"
# Axum
axum = { version = "0.7.2", features = ["ws"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
hyper = "0.14"
futures-util = "0.3"
#Serde
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
